# Generic_Modules

./: .gitmodules  CMakeLists.txt  GenericModules.sln  GenericModules.vcxproj  GenericModules.vcxproj.filters  GenericModulesTests.cpp  GenericModulesTests.vcxproj  GenericModulesTests.vcxproj.filters  HPFModule.cpp  SessionProcModule.cpp  SimulatorModule.cpp  TimeToWAVModule.cpp  WAVAccumulator.cpp  WatchdogModule.cpp  component.mk
.github/workflows/: cmake.yml  msbuild.yml
GenericModules/: CMakeLists.txt  GenericModules.vcxproj  RouterModule.h  SessionProcModule.cpp  SimulatorModule.cpp  SimulatorModule.h  WAVAccumulator.cpp  WAVAccumulator.h  WAVWriterModule.cpp  WAVWriterModule.h
include/: ChunkToBytesModule.h  DirectionFindingModule.h  EnergyDetectionModule.h  FFTModule.h  GPSInterfaceModule.h  HPFModule.h  HTTPPostModule.h  JSONStateAccumulatorModule.h  LinuxMultiClientTCPRxModule.h  LinuxMultiClientTCPTxModule.h  LinuxTCPTxModule.h  LinuxWAVWriterModule.h  RateLimitingModule.h  RouterModule.h  SessionProcModule.h  SimulatorModule.h  SoundCardInterfaceModule.h  TCPRxModule.h  TCPTxModule.h  TimeChunkSynchronisationModule.h  TimeChunkSynchronisationModule.h.old  TimeToWAVModule.h  ToJSONModule.h  TracerModule.h  WAVAccumulator.h  WAVReaderModule.h  WAVWriterModule.h  WatchdogModule.h
include_tests/: FFTModuleTests.h  RouterModuleTests.h  SessionProcModuleTests.h  SimulatorModuleTests.h  TimeToWAVModuleTests.h  ToJSONModuleTests.h  WAVAccumulatorModuleTests.h
source/: ChunkToBytesModule.cpp  DirectionFindingModule.cpp  EnergyDetectionModule.cpp  FFTModule.cpp  GPSInterfaceModule.cpp  HPFModule.cpp  HTTPPostModule.cpp  JSONStateAccumulatorModule.cpp  LinuxMultiClientTCPRxModule.cpp  LinuxMultiClientTCPTxModule.cpp  LinuxTCPTxModule.cpp  LinuxWAVWriterModule.cpp  RateLimitingModule.cpp  RouterModule.cpp  SessionProcModule.cpp  SimulatorModule.cpp  SoundCardInterfaceModule.cpp  TCPRxModule.cpp  TCPTxModule.cpp  TimeChunkSynchronisationModule.cpp  TimeChunkSynchronisationModule.cpp.old  TimeToWAVModule.cpp  ToJSONModule.cpp  TracerModule.cpp  WAVAccumulator.cpp  WAVReaderModule.cpp  WAVWriterModule.cpp  WatchdogModule.cpp
source_tests/: GenericModulesTests.cpp
tests/: RouterModuleTests.h  SessionProcModuleTests.h  TestGPSInterfaceModule.cpp  TestSimulatorModule.cpp  TestTimeChunkSynchronisationModule.cpp  TimeToWAVModuleTests.h  WAVAccumulatorModuleTests.h
